This commit refactors the styling for the page links by adjusting the positioning, margin, padding, height, and border radius for the .link-container and .page-link classes. The align-items property for .parent class is also updated to 'flex-start'. Additionally, some comments are removed from the code. The changes aim to improve the overall appearance of the page links and ensure better consistency in the styling.

--- a/style.css
+++ b/style.css
@@ -6,24 +6,25 @@ body {
     /* border: 2px solid gold; */
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     /* background-color: gold; */
     /* background-color: #093145; */
-    height: 700px;
+    height: 55em;
 
 }
 
     .link-container {
-        /* margin: 50px 0; */
+        margin: 5em 0 0;
+        /* margin: auto; */
         /* border: 2px solid salmon; */
-        border-radius: 30px;
-        padding: 0 55px;
+        border-radius: 3em;
+        padding: 0 5em;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 35px;
-        height: 70%;
+        gap: 2em;
+        height: 40em;
         /* background-color: rgb(168, 161, 161); */
         background-color: white;
         /* background-color: rgb(247, 247, 152); */
@@ -32,14 +33,15 @@ body {
 
         .page-link {
             /* border: 2px solid gold; */
-            border-radius: 50px;
-            padding: 12px 25px 15px;
+            border-radius: 5em;
+            padding: 0.8em 1.5em 1em;
             text-decoration: none;
             /* color: rgb(233, 232, 223); */
             color: white;
             /* background-color: #039180; */
             background-color: #093145;
-            font-size: 20px;
+            /* background: linear-gradient(to right, #6DE195 10%, #C4E759 90%); */
+            font-size: 1.2em;
             font-family: 'Lato', sans-serif;
             /* font-family: 'Roboto', sans-serif; */
             font-weight: 400;
